--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
     <div class="container">
         <h1>下載 Agent</h1>
         <ul>
-            <li><a href="/downloads/agent.exe">點我下載 agent.exe</a></li>
+        <li><a href="{{ url_for('static', filename='downloads/agent.exe') }}" download>點我下載 agent.exe</a></li>
         </ul>
     </div>
 </body>
