--- a/templates/view.html
+++ b/templates/view.html
@@ -28,8 +28,8 @@
   <table>
     <thead>
       <tr>
-        <th>時間(UTC)</th><th>客戶</th><th>Public IP</th><th>Internal IP</th>
-        <th>向量</th><th>Payload Hash</th><th>長度</th>
+        <th>time(UTC)</th><th>User</th><th>Public IP</th><th>Internal IP</th>
+        <th>向量</th><th>Payload Hash</th><th>length</th>
       </tr>
     </thead>
     <tbody>
