--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
         </p>
     </div>
     <div style="flex: 1;">
-        <img src="/templates/專題.jpg" alt="專題圖片" style="width: 100%; border-radius: 10px;">
+<img src="{{ url_for('templates', filename='專題.JPG') }}" alt="專題圖片" style="width:100%; border-radius:10px;">
     </div>
 </div>
 
