--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
         </p>
     </div>
     <div style="flex: 1;">
-<img src="{{ url_for('static', filename='專題.JPG') }}" alt="專題圖片" style="width:100%; border-radius:10px;">
+<img src="{{ url_for('static', filename='images/banner.jpg') }}" alt="專題圖片" style="width:100%; border-radius:10px;">
     </div>
 </div>
 
